syntax = "proto3";

package pdytr.rigol;

service ChatService {
  rpc Join(JoinRequest) returns (stream ChatEvent);
  rpc Probe(ProbeRequest) returns (ServerEvent);
  rpc Leave(LeaveRequest) returns (ServerEvent);
  rpc SendMessage(MessageRequest) returns (ServerEvent);
  rpc GetHistory(HistoryRequest) returns (stream FileChunk);
}

message JoinRequest {
  string username = 1;
}

message ProbeRequest {
  string username = 1;
}

message LeaveRequest {
  string username = 1;
}

message MessageRequest {
  string username = 1;
  string message = 2;
}

message HistoryRequest {
  string command = 1;
}

message ChatEvent {
  string message = 1;
}

message ServerEvent {
  bool status = 1;
}

message FileChunk {
  bytes content = 1;
}